// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lifecycle method 1`] = `
PageParser {
  "lifecycleMethodStack": Object {
    "onHide": Array [],
    "onLoad": Array [
      [Function],
      [Function],
      [Function],
      [Function],
    ],
    "onPageScroll": Array [],
    "onPullDownRefresh": Array [],
    "onReachBottom": Array [],
    "onReady": Array [],
    "onShareAppMessage": Array [],
    "onShow": Array [
      [Function],
      [Function],
      [Function],
    ],
    "onUnload": Array [
      [Function],
      [Function],
      [Function],
      [Function],
    ],
  },
  "page": Object {
    "data": Object {
      "btn": "hello btn",
      "hello": "hello",
      "text": "loading...",
    },
    "hello": [Function],
  },
}
`;

exports[`lifecycle method 2`] = `
Object {
  "data": Object {
    "btn": "hello btn",
    "hello": "hello",
    "text": "loading...",
  },
  "hello": [Function],
  "onLoad": [Function],
  "onShow": [Function],
  "onUnload": [Function],
}
`;

exports[`mixins 1`] = `
Object {
  "data": Object {
    "hello": "hello",
    "id": 1,
    "world": "world",
  },
  "sayHello": [Function],
  "sayWorld": [Function],
}
`;

exports[`mixins 2`] = `
PageParser {
  "lifecycleMethodStack": Object {
    "onHide": Array [],
    "onLoad": Array [],
    "onPageScroll": Array [],
    "onPullDownRefresh": Array [],
    "onReachBottom": Array [],
    "onReady": Array [],
    "onShareAppMessage": Array [],
    "onShow": Array [],
    "onUnload": Array [],
  },
  "page": Object {
    "data": Object {
      "btn": true,
      "hello": "hello",
      "id": 2,
      "name": "rxpage",
      "nested": true,
      "test": true,
      "world": "world",
    },
    "sayHello": [Function],
    "sayWorld": [Function],
  },
}
`;
